<resources>
    <string name="app_name">PumperControl</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="water_pressure">%1$sBar</string>
    <string name="power">%1$sW</string>
    <string name="speed">%1$sRpm</string>
    <string name="water_pressure_title">水压：</string>
    <string name="power_tittle">功率：</string>
    <string name="speed_tittle">转速：</string>
    <string name="time_tittle">时间：</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="mode">模式:</string>
    <string name="failure">故障:</string>
    <string name="water_pressure_mode">水压</string>
    <string name="water_stream_mode">水流</string>
    <string name="timer_mode">定时</string>
    <string name="set_water_pressure">当前水压:%1$sBar</string>
    <string name="no_warn">无故障</string>
    <string name="water_less">缺水</string>
    <string name="water_pressure_less">欠压</string>
    <string name="water_pressure_more">过压</string>
    <string name="water_pressure_sensor_exception">传感器</string>
    <string name="excessive_current">过流</string>
    <string name="overload">过载</string>
    <string name="net_error">网络错误</string>
    <string name="device_id">设备号:</string>
    <string name="send">发送</string>
    <string name="result_ok">已下发命令，请等待响应</string>
    <string name="bar">/Mpa</string>
    <string name="ok">确定</string>
    <string name="pressure">压力</string>
    <string name="title_activity_view_demo">ViewDemoActivity</string>

</resources>
